crates/ink/tests/ui/contract/fail/impl-block-using-static-env-no-marker.stderr
error[E0599]: no function or associated item named `env` found for struct `Contract` in the current scope
  --> tests/ui/contract/fail/impl-block-using-static-env-no-marker.rs:20:27
   |
4  |     pub struct Contract {}
   |     ------------------- function or associated item `env` not found for this struct
...
20 |             let _ = Self::env().caller();
   |                           ^^^ function or associated item not found in `Contract`
   |
note: if you're trying to build a new `Contract` consider using one of the following associated functions:
      contract::_::<impl Contract>::constructor
      Contract::constructor_impl
  --> tests/ui/contract/fail/impl-block-using-static-env-no-marker.rs:8:9
   |
8  |         pub fn constructor() -> Self {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
19 |         fn constructor_impl() -> Self {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
1  + use ink::codegen::StaticEnv;
   |
